still working on home page

--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,13 +1,14 @@
 <header id="nav-bar">
     <a href="">
-        <img src="images/logo-icon.svg" alt="logo">
+        <img src="/images/logo-icon.svg" alt="logo">
     </a>
     <div id="search-navbar">
+        <div id="small-searchbar-container">
+            <input id="small-search-input" type="text">
+            <img src="/images/search-icon-small.svg" alt="search icon">
+        </div>
         <a href="">
-            <img src="images/search-icon-small.svg" alt="search icon">
-        </a>
-        <a href="">
-            <img src="images/helmet-icon.svg" alt="helmet icon">
+            <img src="/images/helmet-icon.svg" alt="helmet icon">
         </a>
     </div>
 </header>
