--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: 'Din Pro Black';
-  src: url('./../fonts/DINPro-Black.otf') format('Opentype');
-}
-
-@font-face {
-  font-family: 'Din Pro Medium';
-  src: url('./../fonts/DINPro-Medium.otf') format('Opentype');
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -22,37 +12,6 @@ body {
 
 #main-container {
   margin: 0 80px;
-}
-
-/* NAV BAR  */
-
-#nav-bar {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 80px 60px 80px;
-  padding-top: 40px;
-}
-
-#nav-bar a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#search-navbar {
-  display: flex;
-}
-
-#search-navbar a {
-  width: 64px;
-  height: 64px;
-  border-radius: 32px;
-  border: 1px solid rgba(192, 194, 245, 0.3);
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-#search-navbar a:nth-child(1) {
-  margin-right: 16px;
 }
 
 /* VIDEO BACKGROUND  */
@@ -72,7 +31,7 @@ body {
 
 #title-home-container h1 {
   margin-bottom: 16px;
-  font-family: 'Din Pro Black';
+  font-family: 'Din Pro 900';
   font-size: 110px;
   line-height: 84%;
   color:rgba(240, 240, 255, 1);
@@ -81,7 +40,7 @@ body {
 
 #title-home-container h2 {
   margin-bottom: 52px;
-  font-family: 'Din Pro Medium';
+  font-family: 'Din Pro 500';
   font-size: 32px;
   line-height: 100%;
   color: rgba(192, 194, 245, 1);
@@ -110,7 +69,7 @@ body {
 
 @keyframes text-appear2 {
   from {
-    transform: translateY(80px);
+    transform: translateY(30px);
     opacity: 0;
   }
 
@@ -122,34 +81,27 @@ body {
 
 /* SEARCH BAR  */
 
-#search-bar {
-  max-width: 80%;
-  width: 100%;
+#main-search-bar {
+  width: 80%;
   padding: 28px 24px;
   background-color: rgba(0, 3, 28, 0.6);
   border-radius: 1000px;
   border: 1px solid rgba(192, 194, 245, 0.3);
-  font-family: 'Din Pro Medium';
-  font-size: 32px;
+  font-family: 'Din Pro 400';
+  font-size: 28px;
   line-height: 38px;
   color: rgba(255, 255, 255, 1);
-  transition: max-width 0.3s ease-out;
+  transition: width 0.2s ease-in;
 }
 
-#search-bar::placeholder {
+#main-search-bar::placeholder {
   color: rgba(192, 194, 245, 0.4);
 }
 
-#search-bar:focus {
+#main-search-bar:focus {
   outline: none;
-  max-width:100%;
-  transition: max-width 0.3s ease-out;
-}
-
-#search-bar + img {
-  position: absolute;
-  top: 40px;
-  right: 32px;
+  width: 100%;
+  transition: width 0.2s ease-in;
 }
 
 
