--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{!-- BGtest moins lourd en attendant le déploiement  --}}
 <video id="videoBG" autoplay muted loop>
-    <source src="images/BGtest.mp4" type="video/mp4">
+    <source src="/images/BGtest.mp4" type="video/mp4">
 </video>
 
 <div id="main-container">
@@ -9,7 +9,8 @@
         <h2>and collect them all</h2>
     </div>
 
-    <input id="search-bar" type="text" placeholder="Look for a game, genre...">
+    <input id="main-search-bar" type="text" placeholder="Look for a game, genre...">
+
 </div>
 
 
