--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>Power up 🎮</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/fonts.css' />
+    <link rel='stylesheet' href='/stylesheets/nav-bar.css' />
+    <link rel="icon" href="/images/powerup_favicon.ico" />
+    <script type="module" src="/javascripts/search-navbar.js"></script>
   </head>
   <body>
     {{> navBar}}
