started gameCard partial - added css files

--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -1,1 +1,12 @@
-<h2>hello partial</h2>
+<div id="card-container" style="background-image: url('https://static-assets-prod.epicgames.com/fortnite/static/webpack/8f9484f10eb14f85a189fb6117a57026.jpg');">
+    {{!-- link to game detail page --}}
+    <a href=""></a>
+    <div id="card-content">
+        <div id="top-content">
+            
+        </div>
+        <div id="bottom-content">
+
+        </div>
+    </div>
+</div>
