--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,14 +2,18 @@
 <html>
   <head>
     <title>Power up 🎮</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="/images/powerup_favicon.ico" />
     <link rel='stylesheet' href='/stylesheets/fonts.css' />
     <link rel='stylesheet' href='/stylesheets/nav-bar.css' />
-    <link rel="icon" href="/images/powerup_favicon.ico" />
+    {{#each css}}
+      <link rel="stylesheet" href="/stylesheets/{{this}}.css">
+    {{/each}}
     <script type="module" src="/javascripts/search-navbar.js"></script>
   </head>
   <body>
+
     {{> navBar}}
+
     {{{body}}}
     
   </body>
