add searchbar with results by game name

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
 
     <input id="main-search-bar" type="text" placeholder="Look for a game, genre...">
 
-    {{> gameCard}}
+    {{!-- {{> gameCard}} --}}
 
 </div>
 
