--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,9 @@
       <link rel="stylesheet" href="/stylesheets/{{this}}.css">
     {{/each}}
     <script type="module" src="/javascripts/search-navbar.js"></script>
+    <script type="module" src="/javascripts/search-mainbar.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   </head>
   <body>
 
