--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,14 +1,30 @@
 <header id="nav-bar">
-    <a href="">
+    <a href="/">
         <img src="/images/logo-icon.svg" alt="logo">
     </a>
     <div id="search-navbar">
+
         <div id="small-searchbar-container">
             <input id="small-search-input" type="text">
             <img src="/images/search-icon-small.svg" alt="search icon">
         </div>
-        <a href="">
+
+        <div id="auth-icon">
             <img src="/images/helmet-icon.svg" alt="helmet icon">
-        </a>
+
+            <div class="hide" id="auth-widget">
+
+                {{#if isLoggedIn}}
+                <a href="/profile">Profile</a>
+                <a href="/auth/signout">Sign out</a>
+
+                {{else}}
+                <a href="/auth/signin">Sign in</a>
+                <a href="/auth/signup">Sign up</a>
+                {{/if}}
+
+            </div>
+        </div>
+
     </div>
 </header>
