--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>Power up 🎮</title>
     <link rel="icon" href="/images/powerup_favicon.ico" />
+    <link rel='stylesheet' href='/stylesheets/allViews.css' />
     <link rel='stylesheet' href='/stylesheets/fonts.css' />
     <link rel='stylesheet' href='/stylesheets/nav-bar.css' />
     {{#each css}}
