--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
     {{/each}}
     <script type="module" src="/javascripts/search-navbar.js"></script>
     <script type="module" src="/javascripts/search-mainbar.js"></script>
+    <script type="module" src="/javascripts/profileAndGameStatus.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   </head>
