--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -4,31 +4,33 @@
 {{user.username}}
 {{user.mail}}
 
-
+<button id="all">All</button>
 <button id="WantToPlay">WantToPlay</button>
 <button id="AlreadyPlayed">AlreadyPlayed</button>
 <button id="CurrentPlay">CurrentPlay</button>
 
 
-<h2>wantToPlay</h2>
+
+
+{{!-- <h2>wantToPlay</h2> --}}
 {{#each user.wantToPlay}}
-<div>{{this.name}}</div>
+<div>{{this}}</div>
 {{!-- <button class="moveToCurrentPlay" >CurrentPlay</button>
 <button class="moveToAlreadyPlayed" >Alreadyplayed</button> --}}
 {{/each}}
 
-<h2>CurrentPlay</h2>
+{{!-- <h2>CurrentPlay</h2> --}}
 <div>
 {{#each user.currentPlay}}
-<div>{{this.name}}</div>
+<div>{{this}}</div>
 {{!-- <button class="moveToWantToPlay" >WantToPlay</button>
 <button class="moveToAlreadyPlayed" >Alreadyplayed</button> --}}
 {{/each}}
 </div>
 
-<h2>alreadyPlayed</h2>
+{{!-- <h2>alreadyPlayed</h2> --}}
 {{#each user.alreadyPlayed}}
-<div>{{this.name}}</div>
-<button class="moveToWantToPlay" >WantToPlay</button>
-<button class="moveToCurrentPlay" >CurrentPlay</button>
+<div>{{this}}</div>
+{{!-- <button class="moveToWantToPlay" >WantToPlay</button>
+<button class="moveToCurrentPlay" >CurrentPlay</button> --}}
 {{/each}}
