add style for GameCard/game Gallery / did game Gallery hbs / add dynamic bgColor on ratings

--- a/views/games/gamesCateg.hbs
+++ b/views/games/gamesCateg.hbs
@@ -1,5 +1,8 @@
-<h1>ALL GAMES CATEGORIES PAGE</h1>
-
-{{#each gamesFound}}
-    <li>{{this.name}}</li>
-{{/each}}
+<div id="main-container">
+    <h1 class="result-title">Search results</h1>
+    <section id="card-gallery">
+        {{#each games}}
+            {{> gameCard}}
+        {{/each}}
+    </section>
+</div>
