--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,5 +1,5 @@
 <header id="nav-bar">
-    <a href="">
+    <a href="/">
         <img src="/images/logo-icon.svg" alt="logo">
     </a>
     <div id="search-navbar">
