--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -1,5 +1,7 @@
+
 #card-container, #card-container::before, #card-container a {
     border-radius: 8px;
+    /* justify-self: center; Doesn't work with max-width value */
 }
 
 #card-container {
@@ -10,6 +12,12 @@
     height: 400px;
     max-height: 400px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.28);
+    filter: saturate(0.5);
+}
+#card-container:hover {
+    filter: saturate(1.1);
+    transition: all 0.3s ease-in;
+    transform: scale(1.01) rotate(-1deg); 
 }
 
 #card-container::before {
@@ -27,5 +35,55 @@
     width: 100%;
     height: 100%;
 }
+#bottom-content, #top-content {
+    position: absolute;
+    width: 100%;
+    padding: 17px;
+    
+}
+.rating {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 0;
+    margin-right: 17px;
+    height: 48px;
+    width: 48px;
+    background-color: #389A36;
+    border-radius: 12px;
+}
+#bottom-content {
+    bottom: 0;
+}
 
+h4.card-title {
+    color: #fff;
+    font-family: 'Din Pro Cond 500';
+    font-size: 40px;
+    line-height: 42px;
+    margin-bottom: 18px;
+}
+p{
+    color: #fff;
+    font-family: 'Din Pro Cond 500';
+}
 
+p.card-genre {
+    font-size: 15px;
+    line-height: 17px;
+    margin-bottom: 22px;
+}
+
+p.card-platforms {
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+}
+
+.tag-genre {
+    padding: 4px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    margin-right: 5px;
+}
