--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
     {{#each js}}
       <script type="module" src="/javascripts/{{this}}.js"></script>
     {{/each}}
-    <script type="module" src="/javascripts/profileAndGameStatus.js"></script>
+    {{!-- <script type="module" src="/javascripts/profileAndGameStatus.js"></script> --}}
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   </head>
