update Games route

--- a/views/games/oneGame.hbs
+++ b/views/games/oneGame.hbs
@@ -12,7 +12,7 @@
 <p>{{game.website}}  </p>
 <p>{{game.released}} </p>
 
-<form method="POST" action="/game/{{game._id}}" class="">
+<form method="POST" action="/games/{{game._id}}" class="">
 <label for="currentPlay">currentPlay</label>
 {{!-- <input type="hidden" name="currentPlay" value="0"> --}}
 <input type="checkbox" name="currentPlay" value="currentPlay">
