--- a/views/games/oneGame.hbs
+++ b/views/games/oneGame.hbs
@@ -1,4 +1,4 @@
-<div id="background" style="background-image: url({{game.background_image}});"></div>
+<img id="background" src="{{game.background_image}}" alt="">
 
 <h1>ONE GAME PAGE</h1>
 
@@ -29,14 +29,7 @@
 
 
 
-{{!-- <form method="POST" action="/game/{{game._id}}" class="">
-<select name="game-status" id="game-status">
-<option value="current_play">Currently playing</option>
-<option value="already_played">Completed</option>
-<option value="want_to_play">Wishlist</option>
-</select>
-<button>OK!</button>
-</form>
- --}}
+
+
 
  
