--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -1,7 +1,11 @@
 #background {
     position: absolute;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
-    z-index: -1;
+    top:0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(0, 3, 28, 0) 36.05%, #00031C 100%);
+    mix-blend-mode: luminosity;
+    opacity: 0.5;
+    filter: blur(16px);
+    z-index: -1000;
 }
