--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -1,6 +1,6 @@
 <div id="card-container" style="background-image: url('{{this.background_image}}');">
     {{!-- link to game detail page --}}
-    <a href="">
+    <a href="/games/{{this._id}}">
     <div id="card-content">
         <div id="top-content">
             {{#if this.metacritic}}
