--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,9 +1,15 @@
 <h1>PROFILE PAGE</h1>
+<div>
+<h2>Your infos</h2>
+{{!-- <p>{{user.username}}</p>
+<p>{{user.mail}}</p> --}}
+<a href="/profile/update">Update your profile</a>
+<a href="/profile/update-password">Update your password</a>
+<a href="/">Delete your profile</a>
+</div>
 
 
-{{user.username}}
-{{user.mail}}
-
+<h2>Your Collections</h2>
 <button id="all">All</button>
 <button id="WantToPlay">WantToPlay</button>
 <button id="AlreadyPlayed">AlreadyPlayed</button>
