update + delete of user done

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -5,7 +5,7 @@
 <p>{{user.mail}}</p> --}}
 <a href="/profile/update">Update your profile</a>
 <a href="/profile/update-password">Update your password</a>
-<a href="/">Delete your profile</a>
+<a href="/profile/delete">Delete your profile</a>
 </div>
 
 
