with flash messages done

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,6 +2,7 @@
 <video id="videoBG" autoplay muted loop>
     <source src="/images/BGtest.mp4" type="video/mp4">
 </video>
+    
 
 <div id="all-container">
     <div id="signup-container">
@@ -10,6 +11,8 @@
         <h1>sign up</h1>
 
         <form action="/auth/signup" method="POST">
+                 {{> flash_message }}
+
             <label for="mail">email address</label>
             <input name="mail" id="mail" type="email" placeholder="catch-em-all@pokemon.com" value="test@testmail.fr">
 
