--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/allViews.css' />
     <link rel='stylesheet' href='/stylesheets/fonts.css' />
     <link rel='stylesheet' href='/stylesheets/nav-bar.css' />
+    <link rel='stylesheet' href='/stylesheets/mod.message.css' />
+
     {{#each css}}
       <link rel="stylesheet" href="/stylesheets/{{this}}.css">
     {{/each}}
