--- a/views/profile/updatePassword.hbs
+++ b/views/profile/updatePassword.hbs
@@ -4,6 +4,7 @@
         <h1>Update your password below</h1>
 
         <form action="/profile/update-password" method="POST">
+        {{> flash_message}}
             <label for="formerPassword">Former password</label>
             <input name="formerPassword" id="formerPassword" type="password" placeholder="former password"
                 value="">
