--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -5,11 +5,14 @@
 
 <div id="all-container">
     <div id="signup-container">
+
         <p>you don't have an account?</p>
         <a href="">click here to sign up <img id="sign-in-icon" src="/images/auth-arrow.svg" alt=""></a>
         <h1>log in</h1>
 
         <form action="/auth/signin" method="POST">
+                 {{> flash_message }}
+
             <label for="mail">email address</label>
             <input name="mail" id="mail" type="email" placeholder="catch-em-all@pokemon.com" value="test@testmail.fr">
 
