profile game render by category and css done

--- a/public/stylesheets/allGames.css
+++ b/public/stylesheets/allGames.css
@@ -1,7 +1,8 @@
 #card-gallery {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    justify-content: center;
+    /* justify-content: center;
+    align-content: center; */
     gap: 20px;
 }
 
