--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -16,6 +16,7 @@
 
                 {{#if isLoggedIn}}
                 <a href="/profile">Profile</a>
+                <a href="/">Settings</a>
                 <a href="/auth/signout">Sign out</a>
 
                 {{else}}
