--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,26 +1,22 @@
-<h1>PROFILE PAGE</h1>
-<div>
-<h2>Your infos</h2>
-{{!-- <p>{{user.username}}</p>
-<p>{{user.mail}}</p> --}}
+
+{{!-- 
 <a href="/profile/update">Update your profile</a>
 <a href="/profile/update-password">Update your password</a>
-<a href="/profile/delete">Delete your profile</a>
+<a href="/profile/delete">Delete your profile</a> --}}
+
+
+<div id="profile-text">
+    <h2>your profile</h2>
+    <h1 id="username"></h1>
+    <ul>
+        <li id = "all">all</li>
+        <li id = "currentPlay">currently playing</li>
+        <li id = "wantToPlay">want to play</li>
+        <li id = "alreadyPlayed">completed</li>
+    </ul>
 </div>
 
-
-<h2>your profile</h2>
-<h1 id="username"></h1>
-<ul>
-    <li id = "all">all</li>
-    <li id = "currentPlay">currently playing</li>
-    <li id = "wantToPlay">want to play</li>
-    <li id = "alreadyPlayed">completed</li>
-</ul>
-
-<div id="card-gallery">
-
-</div>
+<div id="card-gallery"></div>
 
 
 
