--- a/public/stylesheets/nav-bar.css
+++ b/public/stylesheets/nav-bar.css
@@ -66,7 +66,7 @@
 
 #auth-widget {
     position: absolute;
-    bottom: -100px;
+    top: 80px;
     right: 0;
     width: 190px;
     background-color: rgba(192, 194, 245, 0.2);
