did One Game Page + somes css on card and game gallery

--- a/views/games/gamesCateg.hbs
+++ b/views/games/gamesCateg.hbs
@@ -1,5 +1,6 @@
+<div id="halo-bg"><div></div></div>
 <div id="main-container">
-    <h1 class="result-title">Search results</h1>
+    <h1 class="result-title">Results for: <u>{{query}}</u> </h1>
     <section id="card-gallery">
         {{#each games}}
             {{> gameCard}}
