--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -69,21 +69,26 @@ p{
     font-family: 'Din Pro Cond 500';
 }
 
-p.card-genre {
-    font-size: 15px;
-    line-height: 17px;
+.card-genres {
     margin-bottom: 22px;
+}
+.tag-genre {
+    padding: 4px 12px;
+    font-size: 11px;
+    line-height: 26px;
+    text-transform: uppercase;
+    border: 1px solid #C0C2F5;
+    color: #C0C2F5;
+    border-radius: 20px;
+    margin-right: 5px;
 }
 
 p.card-platforms {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px;
+    color: #C0C2F5;
     text-transform: uppercase;
 }
-
-.tag-genre {
-    padding: 4px;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    margin-right: 5px;
+.split-dash:not(:last-of-type):after {
+    content: '-';
 }
