--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -5,7 +5,113 @@
     width: 100%;
     background: linear-gradient(180deg, rgba(0, 3, 28, 0) 36.05%, #00031C 100%);
     mix-blend-mode: luminosity;
-    opacity: 0.5;
+    opacity: 0.4;
     filter: blur(16px);
     z-index: -1000;
+}
+p {
+    font-size: 16px;
+    line-height: 24px;
+}
+#game-container {
+    margin: 30px 80px 0;
+    font-family: 'DIN Pro 400';
+    color: #fff;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 20px;
+}
+#game-container section {
+    margin-top: -20px;
+    grid-column: 1 / span 6;
+}
+.split-comma:not(:last-of-type):after {
+    content: ',';
+}
+.split-dash:not(:last-of-type):after {
+    content: '-';
+}
+#game-container section h1 {
+    font-size: 75px;
+    font-family: 'DIN Pro 900';
+    text-transform: uppercase;
+    line-height: 75px;
+    margin: 30px 0;
+}
+#ratings-status {
+    display: flex;
+    margin: 30px 0 50px;
+}
+.game-description{
+    pointer-events: none;
+}
+.rating-block,
+.collection-block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 15px 5px 5px;
+    height: 48px;
+    border-radius: 12px;
+    background-color: rgba(18, 21, 46, 0.48);
+    margin-right: 25px;
+}
+.collection-block {
+    position: relative;
+    padding: 5px 15px;
+    cursor: pointer;
+
+}
+.rating-block p,
+.collection-block p {
+    font-size: 14px;
+}
+.rating {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    background-color: #389A36;
+    border-radius: 8px;
+    margin-right: 15px;
+}
+
+#game-platforms p {
+    margin: 20px 0 40px;
+    font-size: 12px;
+    color: #C0C2F5;
+    text-transform: uppercase;
+}
+#game-genres span {
+    padding: 6px 18px;
+    font-size: 12px;
+    text-transform: uppercase;
+    border: 1px solid #C0C2F5;
+    color: #C0C2F5;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+
+#game-container aside {
+    justify-self: center;
+    grid-column: 7 / span 6;
+}
+#img-container {
+    width: 420px;
+    height: 590px;
+    border-radius: 10px;
+    background-size: cover;
+    background-position:  center;
+    transform: rotate(4deg);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.28);
+    filter: saturate(0.8);
+}
+#img-container:before {
+    border-radius: 10px;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 3, 28, 0) 32.92%, rgba(0, 3, 28, 0.72) 100%), linear-gradient(0deg, rgba(0, 3, 28, 0.2), rgba(0, 3, 28, 0.2));
 }
