fixed update/settings css

--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,7 +1,7 @@
-{{!-- BGtest moins lourd en attendant le déploiement  --}}
-{{!-- <video id="videoBG" autoplay muted loop>
+{{!-- BGtest moins lourd en attendant le déploiement --}}
+<video id="videoBG" autoplay muted loop>
     <source src="/images/BGtest.mp4" type="video/mp4">
-</video> --}}
+</video>
 
 <div id="all-container">
     <div id="signup-container">
