--- a/views/profile/updatePassword.hbs
+++ b/views/profile/updatePassword.hbs
@@ -1,7 +1,13 @@
+<video id="videoBG" autoplay muted loop>
+    <source src="/images/BGtest.mp4" type="video/mp4">
+</video>
 
 <div id="all-container">
-    <div id="update-password-container">
-        <h1>Update your password below</h1>
+    <div id="signup-container">
+        <p>want to change your username/email?</p>
+        <a href="/profile/update-password">click here to update it<img id="sign-in-icon" src="/images/auth-arrow.svg" alt=""></a>
+
+        <h1>update</h1>
 
         <form action="/profile/update-password" method="POST">
         {{> flash_message}}
