--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -14,7 +14,7 @@ p {
     line-height: 24px;
 }
 #game-container {
-    margin: 30px 80px 0;
+    margin: 30px 80px 100px;
     font-family: 'DIN Pro 400';
     color: #fff;
     display: grid;
