--- a/views/games/gamesCateg.hbs
+++ b/views/games/gamesCateg.hbs
@@ -1,6 +1,6 @@
-<div id="halo-bg"><div></div></div>
 <div id="main-container">
-    <h1 class="result-title">Results for: <u>{{query}}</u> </h1>
+    <h2 id="result-for">results for:</h2>
+    <h1 id="result-search-title">{{query}}</h1>
     <section id="card-gallery">
         {{#each games}}
             {{> gameCard}}
