--- a/public/stylesheets/allViews.css
+++ b/public/stylesheets/allViews.css
@@ -8,3 +8,16 @@ body {
     background-color: rgba(0, 3, 28, 1);
     color: rgba(192, 194, 245, 1);
 }
+
+#halo-bg {
+    position: fixed;
+    top: -30%;
+    right: -50%;
+    z-index: -1000;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(50% 50% at 50% 50%, #FD00E4 0%, rgba(253, 0, 228, 0) 100%);
+    opacity: 0.2;
+    z-index: 99999;
+    pointer-events: none;
+}
