--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -9,10 +9,12 @@
     filter: blur(16px);
     z-index: -1000;
 }
+
 p {
     font-size: 16px;
     line-height: 24px;
 }
+
 #game-container {
     margin: 30px 80px 0;
     font-family: 'DIN Pro 400';
@@ -21,16 +23,20 @@ p {
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
 }
+
 #game-container section {
     margin-top: -20px;
     grid-column: 1 / span 6;
 }
+
 .split-comma:not(:last-of-type):after {
     content: ',';
 }
+
 .split-dash:not(:last-of-type):after {
     content: '-';
 }
+
 #game-container section h1 {
     font-size: 75px;
     font-family: 'DIN Pro 900';
@@ -38,13 +44,16 @@ p {
     line-height: 75px;
     margin: 30px 0;
 }
+
 #ratings-status {
     display: flex;
     margin: 30px 0 50px;
 }
+
 .game-description{
     pointer-events: none;
 }
+
 .rating-block,
 .collection-block {
     display: flex;
@@ -56,16 +65,19 @@ p {
     background-color: rgba(18, 21, 46, 0.48);
     margin-right: 25px;
 }
+
 .collection-block {
     position: relative;
     padding: 5px 15px;
     cursor: pointer;
 
 }
+
 .rating-block p,
 .collection-block p {
     font-size: 14px;
 }
+
 .rating {
     display: flex;
     justify-content: center;
@@ -83,6 +95,7 @@ p {
     color: #C0C2F5;
     text-transform: uppercase;
 }
+
 #game-genres span {
     padding: 6px 18px;
     font-size: 12px;
@@ -97,6 +110,7 @@ p {
     justify-self: center;
     grid-column: 7 / span 6;
 }
+
 #img-container {
     width: 420px;
     height: 590px;
@@ -105,13 +119,18 @@ p {
     background-position:  center;
     transform: rotate(4deg);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.28);
-    filter: saturate(0.8);
 }
+
 #img-container:before {
     border-radius: 10px;
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0, 3, 28, 0) 32.92%, rgba(0, 3, 28, 0.72) 100%), linear-gradient(0deg, rgba(0, 3, 28, 0.2), rgba(0, 3, 28, 0.2));
+    background: linear-gradient(180deg, rgba(0, 3, 28, 0) 32.92%, rgba(0, 3, 28, 0.72) 100%), linear-gradient(0deg, rgba(0, 3, 28, 0.1), rgba(0, 3, 28, 0.1));
+}
+
+#img-container {
+    position: sticky;
+    top: 55px;
 }
