--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
     </div>
 
     <input id="main-search-bar" type="text" placeholder="Look for a game, genre...">
-
+    <ul id="drop-down"></ul>
     {{!-- {{> gameCard}} --}}
 
 </div>
