change behavior of checkbox, add flashMsg when change status and not login, add catch when no result found

--- a/public/stylesheets/allViews.css
+++ b/public/stylesheets/allViews.css
@@ -8,7 +8,13 @@ body {
     background-color: rgba(0, 3, 28, 1);
     color: rgba(192, 194, 245, 1);
 }
-
+a {
+    text-decoration: none;
+    color: #00031c;
+}
+a:hover {
+    text-decoration:underline;
+}
 #halo-bg {
     position: fixed;
     top: -30%;
