--- a/public/stylesheets/allGames.css
+++ b/public/stylesheets/allGames.css
@@ -1,3 +1,14 @@
+a {
+    font-family: 'DIN Pro 400';
+    color: rgba(192, 194, 245, 1);
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration:underline;
+}
 #result-for {
     font-family: 'DIN Pro 400';
     color: rgba(192, 194, 245, 1);
