--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,11 +9,19 @@
         <h2>and collect them all</h2>
     </div>
 
-    <input id="main-search-bar" type="text" placeholder="Look for a game, genre...">
-    <ul id="drop-down"></ul>
+    <div id="main-search-container">
+        <input id="main-search-bar" type="text" placeholder="Look for a game...">
+        <img src="/images/search-icon.svg" alt="">
+    </div>
+    <ul id="drop-down-searchbar"></ul>
     {{!-- {{> gameCard}} --}}
 
 </div>
+
+
+
+
+
 
 
 
