--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -1,3 +1,7 @@
+#left-col {
+    margin-right: 90px;
+}
+
 #background {
     position: absolute;
     top:0;
@@ -97,6 +101,7 @@ p {
 }
 
 #game-genres span {
+    line-height: 40px;
     padding: 6px 18px;
     font-size: 12px;
     text-transform: uppercase;
@@ -105,6 +110,8 @@ p {
     border-radius: 20px;
     margin-right: 10px;
 }
+
+/* RIGHT SIDE  */
 
 #game-container aside {
     justify-self: center;
@@ -132,5 +139,42 @@ p {
 
 #img-container {
     position: sticky;
-    top: 55px;
+    top: 20%;
+}
+
+
+
+@media only screen and (max-width: 1040px) {
+    #game-container {
+        position: relative;
+    }
+
+    #game-container section {
+        grid-column: 1 / span 12;
+    }
+
+    #game-container aside {
+        grid-column: 7 / span 6;
+    }
+
+    #img-container {
+        position: absolute;
+        width: 210px;
+        height: 295px;
+        top: 0;
+        right: 0;
+        z-index: -1000;
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
+    #game-container section h1 {
+        font-size: 45px;
+        line-height: 45px;
+    }
+
+    #left-col {
+        margin-right: 0;
+    }
 }
