--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/fonts.css' />
     <link rel='stylesheet' href='/stylesheets/nav-bar.css' />
     <link rel='stylesheet' href='/stylesheets/mod.message.css' />
+    <link rel="stylesheet" href="/stylesheets/dropdown.css">
 
     {{#each css}}
       <link rel="stylesheet" href="/stylesheets/{{this}}.css">
