--- a/public/stylesheets/gameStatus.css
+++ b/public/stylesheets/gameStatus.css
@@ -1,4 +1,4 @@
-.status-list {
+/* .status-list {
     position: absolute;
     bottom: -150px;
     left: 0;
@@ -49,4 +49,4 @@
     background-color: #C0C2F5;
     color: rgb(18, 21, 46);
     transition: all 0.2s ease-out   ;
-}
+} */
